--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "routes": [
-    { "src": "/", "dest": "/record.html" }
+  "rewrites": [
+    { "source": "/", "destination": "/record.html" }
   ]
 }
